--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE=html>
 
 <html>
-  <t1> 3D Modeling and Animation @ Berkeley </t1>
+	<head> 
+		<title> 3DMA @ Berkeley </title>
+		<link href="main.css" type="text/css" rel="stylesheet">
+	</head>
+	<body>
+		<h1> 3D Modeling and Animation @ Berkeley </h1>
+	</body>
 </html>
