--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 	</head>
 	<body>
 		<h1> 3D Modeling and Animation @ Berkeley </h1>
+		<h3> <a href="index.html"> Home </a> </h3>
+		<h3> <a href="pages/aboutUs.html"> About Us </a> </h3>
+		<h3> <a href="pages/events.html"> Events </a> </h3>
+		<h3> <a href="pages/projects.html"> Projects </a> </h3>
+		<h3> <a href="http://ucbugg.com"> DeCal </a> </h3>
+		<h3> <a href="pages/contact.html"> Contact </a> </h3>
 	</body>
 </html>
