--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1> 3D Modeling and Animation @ Berkeley </h1>
-		<h3> <a href="index.html"> Home </a> </h3>
+		<h3> <a href="https://3dmaatberkeley.github.io/3dmaatberkeley/index.html"> Home </a> </h3>
 		<h3> <a href="pages/aboutUs.html"> About Us </a> </h3>
 		<h3> <a href="pages/events.html"> Events </a> </h3>
 		<h3> <a href="pages/projects.html"> Projects </a> </h3>
