--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
-<!DOCTYPE=html>
+<!DOCTYPE html>
 
 <html>
 	<head> 
 		<title> 3DMA @ Berkeley </title>
+
 		<link href="main.css" type="text/css" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
 	</head>
+
 	<body>
-		<h1> 3D Modeling and Animation @ Berkeley </h1>
+		<h1 class="pageTitle"> 3DMA@B </h1>
+		<h2 class="pageTitle"> 3D Modeling and Animation @ Berkeley </h2>
 		<h3> <a href="index.html"> Home </a> </h3>
 		<h3> <a href="aboutUs.html"> About Us </a> </h3>
 		<h3> <a href="events.html"> Events </a> </h3>
