fixed font weights

--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
 	</head>
 
 	<body>
-		<h1 class="pageTitle"> 3DMA@B </h1>
-		<h2 class="pageTitle"> 3D Modeling and Animation @ Berkeley </h2>
-		<h3> <a href="index.html"> Home </a> </h3>
-		<h3> <a href="aboutUs.html"> About Us </a> </h3>
-		<h3> <a href="events.html"> Events </a> </h3>
-		<h3> <a href="projects.html"> Projects </a> </h3>
-		<h3> <a href="http://ucbugg.com"> DeCal </a> </h3>
-		<h3> <a href="contact.html"> Contact </a> </h3>
+		<!-- Page Title -->
+		<div id="pageTitle">
+			<h1 class="logo"> 3DMA@B </h1>
+			<h2 class="logoText"> 3D Modeling and Animation @ Berkeley </h2>
+		</div>
+
+		<!-- Other Pages -->
+		<div class="pages">
+			<h3> <a href="index.html"> Home </a> </h3>
+			<h3> <a href="aboutUs.html"> About Us </a> </h3>
+			<h3> <a href="events.html"> Events </a> </h3>
+			<h3> <a href="projects.html"> Projects </a> </h3>
+			<h3> <a href="http://ucbugg.com"> DeCal </a> </h3>
+			<h3> <a href="contact.html"> Contact </a> </h3>
+		</div>
 	</body>
 </html>
