aligned nav bar

--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
 	</head>
 
 	<body>
-		<!-- Page Title -->
-		<div id="pageTitle">
-			<h1 class="logo"> 3DMA@B </h1>
-			<h2 class="logoText"> 3D Modeling and Animation @ Berkeley </h2>
-		</div>
+		<header>
+			<!-- Page Title -->
+			<div id="pageTitle">
+				<h1 class="logo"> 3DMA@B </h1>
+				<h2 class="logoText"> 3D Modeling and Animation @ Berkeley </h2>
+			</div>
 
-		<!-- Other Pages -->
-		<div class="pages">
-			<h3> <a href="index.html"> Home </a> </h3>
-			<h3> <a href="aboutUs.html"> About Us </a> </h3>
-			<h3> <a href="events.html"> Events </a> </h3>
-			<h3> <a href="projects.html"> Projects </a> </h3>
-			<h3> <a href="http://ucbugg.com"> DeCal </a> </h3>
-			<h3> <a href="contact.html"> Contact </a> </h3>
-		</div>
+			<!-- Other Pages -->
+			<div class="navBar">
+				<li> <a href="index.html"> Home </a> </li>
+				<li> <a href="aboutUs.html"> About Us </a> </li>
+				<li> <a href="events.html"> Events </a> </li>
+				<li> <a href="projects.html"> Projects </a> </li>
+				<li> <a href="http://ucbugg.com"> DeCal </a> </li>
+				<li> <a href="contact.html"> Contact </a> </li>
+			</div>
+		</header>
 	</body>
 </html>
