--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head> 
 		<title> 3DMA @ Berkeley </title>
 
-		<link href="main.css" type="text/css" rel="stylesheet">
+		<link href="assets/css/main.css" type="text/css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
 	</head>
 
