added fox to home

--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
 				<li> <a href="contact.html"> Contact </a> </li>
 			</div>
 		</header>
+
+		<div>
+			<img src="assets/img/3dma_fox_mascot.png" alt="Melvin the fox">
+		</div>
 	</body>
 </html>
