--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Contact</title>
 
-	<link href="assets/css/main.css" type="text/css" rel="stylesheet">
+	<link href="assets/css/contact.css" type="text/css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
 </head>
 
