--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 			<!-- Other Pages -->
 			<div class="navBar">
-				<li> <a href="index.html"> Home </a> </li>
+				<li> <a href="https://3dmaatberkeley.github.io/"> Home </a> </li>
 				<li> <a href="aboutUs.html"> About Us </a> </li>
 				<li> <a href="events.html"> Events </a> </li>
 				<li> <a href="projects.html"> Projects </a> </li>
@@ -27,8 +27,12 @@
 			</div>
 		</header>
 
-		<div>
-			<img src="assets/img/3dma_fox_mascot.png" alt="Melvin the fox">
+		<div id="banner">
+			<h2 class="logoText"> 3D Modeling and Animation @ Berkeley </h2>
+		</div>
+
+		<div id="fox">
+			<img src="assets/img/3dma_fox_mascot.png" alt="Melvin the fox" style="margin: 0px 0px 0px -25%">
 		</div>
 	</body>
 </html>
