--- a/aboutUs.html
+++ b/aboutUs.html
@@ -3,7 +3,7 @@
 <head>
 	<title>About Us</title>
 
-	<link href="aboutUs.css" type="text/css" rel="stylesheet">
+	<link href="assets/css/aboutUs.css" type="text/css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
 </head>
 
