moved fox to projects page

--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,11 @@
     </div>
   </header>
 
+  <div id="fox">
+    <img src="assets/img/3dma_fox_mascot.png" alt="Melvin the fox" style="margin: 0px 0px -5% -25%">
+    <p> Coming soon! </p>
+  </div>
+
   <div id = "projects"></div>
 
   <div id = "featured"></div>
