--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 			</div>
 		</header>
 
-		<div id="banner">
+		<!-- <div id="banner">
 			<h2 class="logoText"> 3D Modeling and Animation @ Berkeley </h2>
-		</div>
+		</div> -->
 	</body>
 </html>
