--- a/aboutUs.html
+++ b/aboutUs.html
@@ -26,7 +26,7 @@
   </header>
   	<div id="blurb">
 	<!-- blurb -->
-		<p> We are a student organization dedicated to the education, research, and creation of 3D Modeling and Animation. Our goal is to create a supportive community at Berkeley for students who are passionate about learning, creating, and pursuing graphics. Each semester we teach educational workshops, host guest lectures from industry professionals, and organize socials to help students pursue their career and goals. We also run a semester-long DeCal  UCBUGG: 3D Modeling & Animation that teaches the entire animation pipeline to students. </p>
+		<p> We are a student organization dedicated to the education, research, and creation of 3D Modeling and Animation. Our goal is to create a supportive community at Berkeley for students who are passionate about learning, creating, and pursuing graphics. Each semester we teach educational workshops, host guest lectures from industry professionals, and organize socials to help students pursue their career and goals. We also run a semester-long DeCal, <a href="http://ucbugg.com"> UCBUGG: 3D Modeling & Animation </a> that teaches the entire animation pipeline to students. </p>
 	</div>
 </body>
 </html>
