--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
 
 	<link href="assets/css/contact.css" type="text/css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 </head>
 
 <body>
@@ -24,8 +25,29 @@
     </div>
   </header>
 
-  <div id = "form">
+  <div id="form">
+    <h1> Contact Us </h1>
+    <form action="mailto:3dma.at.berkeley@gmail.com" method="POST">
+      <label for="name">Name</label>
+      <input type="text" name="name" id="name">
+      <br>
 
+      <label for="email">Email</label>
+      <input type="text" name="email" id="email">
+      <br>
+
+      <label for="subject">Subject</label>
+      <input type="text" name="subject" id="subject">
+      <br>
+
+      <label for="message">Message</label>
+      <textarea id="message" name="message" rows="5" cols="40"></textarea>
+      <br>
+
+      <section class="submission">
+        <input type="submit" value="Submit">
+      </section>
+    </form>
   </div>
 </body>
 </html>
