--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,12 @@
     </div>
   </header>
 
-  <div id="form">
+
+  <!-- FORM FOR WEBSITE -->
+  <div id="form" >
     <h1> Contact Us </h1>
-    <form action="mailto:3dma.at.berkeley@gmail.com" method="POST">
+    <form id="gform" method="POST" action="https://script.google.com/macros/s/AKfycby6HG3vGuFdaIYZ-C65smPUo0BzqvGZwDx1-jQkq5z4ao2yDU4/exec"
+    onsubmit="this.elements['timestamp'].value= new Date()">
       <label for="name">Name</label>
       <input type="text" name="name" id="name">
       <br>
@@ -44,10 +47,18 @@
       <textarea id="message" name="message" rows="5" cols="40"></textarea>
       <br>
 
+      <input name="timestamp" id="timestamp" type="hidden">
+
       <section class="submission">
-        <input type="submit" value="Submit">
+        <input onclick="window.location.href = 'https://3dmaatberkeley.github.io/contact.html'" type="submit" id="submit-form" value="Submit">
       </section>
+
     </form>
   </div>
+
+
+<script data-cfasync="false" type="text/javascript"
+src="assets/script/form-handler.js"></script>
+
 </body>
 </html>
