--- a/contact/failed.html
+++ b/contact/failed.html
@@ -23,7 +23,7 @@
 				<li> <a href="events.html"> Events </a> </li>
 				<li> <a href="projects.html"> Projects </a> </li>
 				<li> <a href="http://ucbugg.com"> DeCal </a> </li>
-				<li> <a href="contact.html"> Contact </a> </li>
+				<li> <a href="../contact.html"> Contact </a> </li>
 			</div>
 		</header>
 
