added melvin to events page

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,10 @@
     </div>
   </header>
 
+  <!-- <div id="fox">
+    <img src="assets/img/melvin_on_phone.png" alt="Melvin the fox">
+  </div> -->
+
 
   <!-- FORM FOR WEBSITE -->
   <div id="form" >
