--- a/events.html
+++ b/events.html
@@ -24,6 +24,10 @@
     </div>
   </header>
 
+  <div id="fox">
+    <img src="assets/img/3dma_fox_mascot_movie.png" alt="Melvin the fox">
+  </div>
+
   <div id = "upcomingEvents">
     <div id = "timeline">
     </div>
