--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,9 @@
     </div>
   </header>
 
-  <!-- <div id="fox">
-    <img src="assets/img/melvin_on_phone.png" alt="Melvin the fox">
-  </div> -->
+  <div id="fox">
+    <img src="assets/img/3dma_fox_mascot_phone.png" alt="Melvin the fox">
+  </div>
 
 
   <!-- FORM FOR WEBSITE -->
